[gd_scene load_steps=4 format=3 uid="uid://dlslulb4l0i4j"]

[ext_resource type="Script" uid="uid://dqx75735m55x5" path="res://views/bird_house/bird_detail_panel.gd" id="1_detail"]
[ext_resource type="FontFile" uid="uid://dnyg6pd3wordy" path="res://assets/fonts/RHR-CN-0.990/ResourceHanRoundedCN-Heavy.ttf" id="2_font"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.2, 0.25, 0.3, 0.95)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.4, 0.5, 0.6, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="BirdDetailPanel" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_detail")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "È∏üÁ±ªËØ¶ÊÉÖ"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ContentVBox" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="IconContainer" type="CenterContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2

[node name="BirdIcon" type="TextureRect" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox/IconContainer"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="BirdName" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "Â∞èÈ∏üÂêçÁß∞"
horizontal_alignment = 1

[node name="BirdType" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 18
text = "üê£ ÈõèÈ∏ü (‰∏ÄÁ∫ß)"
horizontal_alignment = 1

[node name="BirdDescription" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1
autowrap_mode = 3

[node name="Spacer1" type="Control" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="SkillLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = "ÊäÄËÉΩÁêÉ"
horizontal_alignment = 1

[node name="SkillBalls" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Spacer2" type="Control" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="NicknameLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "ÊòµÁß∞"
horizontal_alignment = 1

[node name="NicknameEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
placeholder_text = "ËæìÂÖ•ÊòµÁß∞..."
alignment = 1
max_length = 20

[node name="Spacer3" type="Control" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ReleaseButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/ScrollContainer/ContentVBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 20
text = "üïä ÊîæÁîüËøôÂè™È∏ü"
